# apple-to-garmin

./: .gitignore  README.md  convert_apple_workouts.py  convert_healthkit_to_fit.py  convert_to_fit.py  convert_to_tcx.py  fetch_healthkit.py  mock_server.py  parser.py  pyproject.toml  test_convert_healthkit_to_fit.py  test_convert_to_fit.py  test_convert_to_tcx.py  test_fetch_healthkit.py
.github/workflows/: test.yml
HealthExport/: HTTPServer.swift  HealthExportApp.swift  HealthKitManager.swift
HealthExport.xcodeproj/: project.pbxproj
HealthExport.xcodeproj/xcshareddata/xcschemes/: HealthExport.xcscheme
HealthKitExporter/: ContentView.swift  HTTPServer.swift  HealthKitExporterApp.swift  HealthKitManager.swift  Info.plist
HealthKitExporter.xcodeproj/: project.pbxproj
HealthKitExporter.xcodeproj/xcshareddata/xcschemes/: HealthKitExporter.xcscheme
fit_files_hk/2022/04/: 2022-04-27_120819_Walking.fit
fit_files_hk/2022/05/: 2022-05-08_190643_Running.fit  2022-05-10_172849_Running.fit  2022-05-12_193705_Running.fit  2022-05-13_205657_Walking.fit  2022-05-14_092025_Running.fit  2022-05-16_144359_Walking.fit  2022-05-16_161323_Walking.fit  2022-05-17_172601_Running.fit  2022-05-19_202628_Running.fit  2022-05-22_061616_Running.fit  2022-05-24_172544_Running.fit  2022-05-24_180328_Running.fit  (+3 more)
health_export/: convert_healthkit_to_fit.py  fetch_healthkit.py  login_garmin.py  upload_to_garmin.py
test_data/: README.md
tests/: mock_server.py  test_convert_healthkit_to_fit.py  test_fetch_healthkit.py  test_login_garmin.py  test_upload_to_garmin.py
(+239 files in other folders)
