[project]
name = "apple-to-garmin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fit-tool>=0.9.15",
    "garminconnect>=0.2.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
